Cambio en el pathResolver
Ya no se aceptan .VB, .Vb o .vB. Sólo se acepta .vb,

El archivo no depende de un nombre específico, puede trabajar con cualquier archivo .vb válido en el directorio donde se ejecuta la aplicación, también acepta una ruta enviada por argumentos sin usar rutas físicas fijas,