@@ -5,6 +5,7 @@
 package CRUnedCompiladresProyecto1.io;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.Comparator;
 import java.util.Optional;
@@ -20,29 +21,54 @@ public class PathResolver {
         return Paths.get(System.getProperty("user.dir"));
     }
 
+
+  
+      
     public Path resolveInputVb(Path workingDir, String[] args) throws IOException {
-        if (args != null && args.length > 0 && args[0] != null && !args[0].trim().isEmpty()) {
-            Path p = workingDir.resolve(args[0].trim());
-            if (!Files.exists(p)) throw new IllegalArgumentException("No existe el archivo: " + p);
-            if (!p.getFileName().toString().toLowerCase().endsWith(".vb"))
-                throw new IllegalArgumentException("El archivo debe ser .vb: " + p.getFileName());
-            return p;
+    Path baseDir = (workingDir != null ? workingDir : Paths.get("").toAbsolutePath()).normalize();
+
+    if (args != null && args.length > 0 && args[0] != null && !args[0].isBlank()) {
+        Path candidate = Paths.get(args[0].trim());
+
+        Path file = candidate.isAbsolute()
+                ? candidate.normalize()
+                : baseDir.resolve(candidate).normalize();
+
+        if (!Files.exists(file) || !Files.isRegularFile(file)) {
+            throw new IllegalArgumentException("No existe el archivo: " + file);
         }
 
-        // Si no hay args: buscar el primer .vb (orden alfabético)
-        try (Stream<Path> s = Files.list(workingDir)) {
-            Optional<Path> first = s
-                    .filter(Files::isRegularFile)
-                    .filter(p -> p.getFileName().toString().toLowerCase().endsWith(".vb"))
-                    .sorted(Comparator.comparing(p -> p.getFileName().toString().toLowerCase()))
-                    .findFirst();
-
-            if (first.isEmpty())
-                throw new IllegalArgumentException("No se encontró ningún .vb en: " + workingDir.toAbsolutePath());
-
-            return first.get();
+        String fileName = file.getFileName().toString();
+        if (!fileName.endsWith(".vb")) {
+            throw new IllegalArgumentException("El archivo debe tener extensión exacta .vb: " + fileName);
         }
+
+        return file;
     }
+
+    try (Stream<Path> stream = Files.list(baseDir)) {
+        Optional<Path> firstVb = stream
+                .filter(Files::isRegularFile)
+                .filter(p -> p.getFileName().toString().endsWith(".vb"))
+                .sorted(Comparator.comparing(p -> p.getFileName().toString()))
+                .findFirst();
+
+        if (firstVb.isEmpty()) {
+            throw new IllegalArgumentException(
+                    "No se encontró ningún archivo con extensión exacta .vb en: " + baseDir.toAbsolutePath()
+            );
+        }
+
+        return firstVb.get();
+    }
+}
+
+    public String readSourcePreservingFormat(Path vbFile) throws IOException {
+        return Files.readString(vbFile, StandardCharsets.UTF_8);
+    }
+    
+
+
 
     public Path resolveOutputLog(Path vbPath) {
         String fileName = vbPath.getFileName().toString();
